--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,51 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ransomware Detector</title>
+  <title>Ransomware Alert</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      width: 300px;
-      padding: 10px;
-    }
-    h1 {
-      font-size: 20px;
-      text-align: center;
-    }
-    p {
-      font-size: 14px;
-      text-align: center;
+      margin: 20px;
     }
     .button {
-      display: block;
-      width: 80%;
-      margin: 10px auto;
-      padding: 10px;
-      background-color: #0078d4;
+      margin: 10px;
+      padding: 10px 20px;
+      background-color: #007bff;
       color: white;
-      text-align: center;
       border: none;
       cursor: pointer;
+      border-radius: 5px;
     }
     .button:hover {
-      background-color: #005a9e;
+      background-color: #0056b3;
     }
   </style>
 </head>
 <body>
-  <h1>Ransomware Detector</h1>
-  <p>Monitoring your downloads for ransomware threats.</p>
-  <button class="button" id="settings">Settings</button>
-  <button class="button" id="check">Check Manually</button>
+  <h1>Ransomware Detected</h1>
+  <p id="fileMessage">A suspicious file has been detected.</p>
+  <button id="deleteButton" class="button">Delete File</button>
+  <button id="keepButton" class="button">Keep File</button>
 
-  <script>
-    document.getElementById('settings').addEventListener('click', function() {
-      alert('Settings button clicked!'); // Replace this with actual functionality
-    });
-
-    document.getElementById('check').addEventListener('click', function() {
-      alert('Manual check button clicked!'); // Replace this with actual functionality
-    });
-  </script>
+  <script src="popup.js"></script>
 </body>
 </html>
